--- a/README.html
+++ b/README.html
@@ -2,3 +2,5 @@ Implementation of a recipe database using PHP + SQL
 
 Requirements:
 -mysqli enabled in your php.ini file
+
+Video of v0.1.3: https://www.youtube.com/watch?v=R39md8vP9t4
